<resources>
    <string name="app_name">Emergency Service</string>
    <string name="current_language">العربية</string>
    <string name="hello_blank_fragment">Map</string>
    <string name="map">Map</string>
    <string name="register_a_new_user">Register a New User</string>
    <string name="welcome_to_tar2">Welcome to Tar2</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login">Login</string>
    <string name="register_new_user">Register New User</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="sign_in_with_huawei">Sign In using Huawei ID</string>
    <string name="loading">Loading…</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name_err_msg">Please enter your name</string>
    <string name="ok">OK</string>
    <string name="enter_phone_err_msg">Enter a correct phone number</string>
    <string name="enter_password_err_msg">Password must be more than 6 chars</string>
    <string name="enter_email_err_msg">Enter a correct email address</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="by_registering_you_agree_to_our">By registering, you agree to our</string>
    <string name="create_account_with_huawei_id">Create account with huawei ID</string>
    <string name="show_terms">Show terms and conditions</string>
    <string name="complete_register">Complete Register your account</string>
    <string name="code">Code</string>
    <string name="next">Next</string>
    <string name="resend_code_msg">If you can\'t get the code you can</string>
    <string name="resend">Re-Send</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_phone_msg">An identification code has been sent to  the mobile number</string>
    <string name="phone_regestered_before_mss">Phone number is already registered to another account</string>
    <string name="agree">Agree</string>
    <string name="no_enternet_connection">No Internet Connection</string>
    <string name="incorrect_phone_or_password">Incorrect phone or password</string>
    <string name="incorrect_verification_code">Incorrect verification code</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password_msg">Enter your mobile number to be able to change password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_otp_code">Please Enter OTP Code</string>
    <string name="enter_confirm_password_err_msg">Please enter a matching password</string>
    <string name="password_reset_success">Password reset successfully, Please login</string>
    <string name="register_success_msg">Your account created successfully, Please login.</string>
    <string name="register_succ_msg">Account created successfully</string>
    <string name="cases">Cases</string>
    <string name="my_cases">My cases</string>
    <string name="menu">More</string>
    <string name="add_new_case">Add New Case</string>
    <string name="case_details">Case Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="case_title">Case Title</string>
    <string name="description">Description</string>
    <string name="case_category">Case Category</string>
    <string name="case_location">Location</string>
    <string name="case_images">Case Images</string>
    <string name="main_image">Main Image</string>
    <string name="case_current_location">Current Location</string>
    <string name="manual_address_optional">Address (Optional)</string>
    <string name="account_not_found">No Account found, Please Register first</string>
    <string name="case_title_err_msg">Please enter a the case title</string>
    <string name="choose_category_err_msg">Please choose a category</string>
    <string name="location_err_msg">Please open the device location and accept location permission to get current location coordinates for the case</string>
    <string name="enter_description">Please enter a description</string>
    <string name="select_category">Select category</string>
    <string name="cancel">Cancel</string>
    <string name="select_iameg">Please Select Image</string>
    <string name="showing_personal_details">Showing Personal Details</string>
    <string name="contact_me_via">Contact me via</string>
    <string name="online_call">Online Call</string>
    <string name="chat">Chat</string>
    <string name="publish">Publish</string>
    <string name="case_created_succ_msg">Case created successfully</string>
    <string name="up_votes">UpVotes</string>
    <string name="saved">Saved</string>
    <string name="published">Published</string>
    <string name="un_published">Un Published</string>
    <string name="views">Views</string>
    <string name="comments">Comments</string>
    <string name="all">All</string>
    <string name="messages">Messages</string>
    <string name="about_app">About app</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="logout">Sign Out</string>

    <string name="just_now">Right now</string>
    <string name="a_min_ago">1 minute ago</string>
    <string name="mins_ago">" minutes ago"</string>
    <string name="a_hour_ago">1 hour ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">" days ago"</string>
    <string name="week_ago">" week ago"</string>
    <string name="weeks_ago">" weeks ago"</string>
    <string name="directions">Directions</string>
    <string name="maps_not_found_msg">Please Download maps app to show the navigation to this case location</string>
    <string name="write_comment">Write Comment</string>
    <string name="request_permission_message">Please accept location permission, We use it to Get cases near by you, Calculate the distance between you and each case, Publish new case and Show case directions.</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="permission_required">Permission Required</string>
    <string name="share_case">Share case</string>
    <string name="downlad_map_app">Download maps app</string>
    <string name="open_on_web">Open on web</string>
    <string name="edit_case">Edit Case</string>
    <string name="case_updated_successfully">Case updated successfully</string>
    <string name="get_direction">Get Directions</string>
    <string name="type_a_message">Type a message</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="chats">Chats</string>
    <string name="about_app_description">( Emergency Service )  app is a social app, that allows users in the case of need assistance to publish their case with description, images, and location of the case to make all users in the range of the case know, that there is someone who needs their help.

By launching the case, ( Emergency Service ) will push a notification to all users in the case range, which user has specified in advance, with the details of the case.

Users can do commentary on the case and communicate by sending messages or calling the owner of the case, as well as can see real images of the location of the case by StreetView and can also react to the case "it's like reaction on Facebook " to make the case more important to the other users so that the application is more effective.

Users can filter the cases by type

Users will get a new message or comment on their cases.

Users can control their cases by deleting them or making them rescued.</string>
    <string name="delete_case">Delete case</string>
    <string name="report_case">Report case</string>
    <string name="report_msg">Case reported successfully.</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="scan_to_open_case">Scan to Open Case</string>
    <string name="scan_case">Scan Case</string>
    <string name="scan">Scan</string>
    <string name="place_the_code_within_the_frame">Place the code generated from Case details within the frame</string>
    <string name="delete_case_message">Are you sure you want to delete this case</string>
    <string name="address">Address</string>
    <string name="police_number">Police number</string>
    <string name="emergency_numbers">Emergency numbers</string>
    <string name="ambulance_number">Ambulance number</string>
    <string name="hot_lines_special">Hotline for people with special needs</string>
    <string name="baby_help">Baby help</string>
    <string name="select_language">Select Language</string>
    <string name="receive_notification">Receive Notification</string>
    <string name="selected_language_value">English</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="skip">Skip</string>
    <string name="boarding_title_text_1">In an urgent Situation?</string>
    <string name="boarding_description_text_1">Post your case now and get a hand from others around you</string>
    <string name="boarding_title_text_2">Give a hand now!</string>
    <string name="boarding_description_text_2">Explore cases now around you to help people</string>
    <string name="get_started">Get Started</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete account</string>
    <string name="save">Save</string>
</resources>