<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/case_qr"
        android:title="@string/scan_case"
        android:icon="@drawable/ic_qr_code">
    </item>
    <item
        android:id="@+id/share_case"
        android:title="@string/share_case"
        android:icon="@drawable/ic_share_case">
    </item>

    <item android:id="@+id/edit_case"
        android:title="@string/edit_case"
        android:icon="@drawable/ic_edit">
    </item>

    <item android:id="@+id/delete_case"
        android:title="@string/delete_case"
        android:icon="@drawable/ic_delete">
    </item>

    <item android:id="@+id/report_case"
        android:title="@string/report_case"
        android:icon="@drawable/ic_report">
    </item>
</menu>