<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.bluethunder.tar2.ui.auth.viewmodel.AuthViewModel" />
    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_back" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="-4dp"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_lock" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_otp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_otp_phone_msg"
                    android:textSize="@dimen/header2_text_size" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:textSize="@dimen/header2_text_size"
                    tools:text="+21067457665" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:hint="@string/code"
                    app:boxStrokeColor="@color/color_transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginTop="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/new_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/color_transparent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/confirm_password"
                    app:boxStrokeColor="@color/color_transparent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp">

                    <TextView
                        android:id="@+id/btn_next"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/sec_btn_bg"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/resend_code_layout"
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/resend_code_msg"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/resend"
                        android:textColor="@color/dark_red" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
