<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.bluethunder.tar2.ui.auth.viewmodel.AuthViewModel" />
    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_logo_btm_name" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_back" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/welcome_to_tar2"
                    android:textSize="@dimen/header2_text_size" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/color_transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/color_transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/dark_red" />


                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp">

                    <TextView
                        android:id="@+id/btn_next"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_btn_bg"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/sec_btn_bg"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/register_new_user"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="16sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/sign_in_with_huawei"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/header2_text_size"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-22dp"
                    app:srcCompat="@drawable/ic_huawie_logo" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
